# poincare-gyrovector

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  VERSIONING.md  build.bat  build.sh
examples/: example.cpp  example.py
include/poincare/: poincare.h  version.h
python/: poincare_bindings.cpp
src/: poincare.cpp
